--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-DBTimetable-iphone 1.0
+**DBTimetable-iphone 1.0**
 September 9, 2011
 
 This is the original Discovery Bay Time Table, version 1.0 series for iPhone, available for AppStore download at:
@@ -11,7 +11,7 @@ DB01R, DB02R, DB03R, Bus 1, 2, 3, 4, 5, 6, 7, 8 and 9
 
 This app uses the Three20 framework extensively, which should serve as a good example on how to integrate Three20 into your project. 
 
-https://github.com/kenguish/DBTimetable-iPhone-1.0/raw/master/Default.png
+<img src="https://github.com/kenguish/DBTimetable-iPhone-1.0/raw/master/Default.png" border="0" />
 
 If you are interested to extend the code, please feel free to contact the project
 maintainer on Github.
